Begin adding translations (animtab, hex gradient)

--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -20,6 +20,9 @@ body{
   background-color: #1b1b1b;
   color: white;
 }
+/* translatable{
+  color:rgb(168, 63, 63)
+} */
 .hero-body{
   background-color: #1b1b1b
 }
