--- a/site/templates/index.ejs
+++ b/site/templates/index.ejs
@@ -5,9 +5,10 @@
       <div class="container has-text-centered">
         <p class="title">SimplyMC</p>
         <p class="subtitle">
-          Minecraft multitool for <span id="typing"></span>
+          <translatable data-translate="subtitle"></translatable>
+          <span id="typing"></span>
           <br><br>
-          💖 Consider donating if this helped you:
+          <translatable data-translate="donate_message"></translatable>
           <br>
           <a href="https://ko-fi.com/N4N550HUP">
             <img src="https://ko-fi.com/img/githubbutton_sm.svg">
