--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -3,7 +3,9 @@
 
   <div id="hexColorTemplate" style="display:none;">
     <div class="row">
-      <label for="color-$NUM">Hex Color #$NUM</label>
+      <label for="color-$NUM">
+        <translatable data-translate="hex_color_title"></translatable>
+        #$NUM</label>
       <input class="input col-md-1 hexColor" id="color-$NUM" value="$VAL"
         data-jscolor="{preset:'small dark', position:'right'}" oninput="javascript: updateOutputText(event)"
         onchange="javascript: updateOutputText(event); Cookies.set(`#${$NUM}`, document.getElementById('color-$NUM').value, { expires: 7, path: '' })" />
@@ -14,10 +16,10 @@
     <div class="hero-body">
       <div class="container">
         <p class="title" id="title">
-          Hex Gradients
+          <translatable data-translate="title"></translatable>
         </p>
         <p class="subtitle">
-          Hex color gradient creator
+          <translatable data-translate="subtitle"></translatable>
         </p>
         <br>
         <% if (alert) { %>
@@ -29,13 +31,19 @@
         <div class="tile is-ancestor">
           <div class="tile is-parent">
             <div class="tile is-child">
-              <p class="title">Output</p>
-              <p class="subtitle">This is what you put in the chat. Click on it to copy.</p>
+              <p class="title">
+                <translatable data-translate="output_title"></translatable>
+              </p>
+              <p class="subtitle">
+                <translatable data-translate="output_subtitle"></translatable>
+              </p>
               <div class="content">
                 <pre class="textarea" id="outputText" placeholder="Output will appear here"
                   onclick="copyTextToClipboard(this.innerText)"></pre>
               </div>
-              <p id="error">This is more than 256 characters and may not fit in the chat box.</p>
+              <p id="error">
+                <translatable data-translate="output_title"></translatable>
+              </p>
             </div>
           </div>
         </div>
@@ -49,7 +57,9 @@
         <div class="tile is-ancestor">
           <div class="tile is-parent">
             <div class="tile is-child">
-              <label for='numOfColors'>Number of Colors</label>
+              <label for='numOfColors'>
+                <translatable data-translate="num_colors"></translatable>
+              </label>
               <input type="number" id="numOfColors" class="input" type="text" min="2" max="10" value="2"
                 oninput="toggleColors(this.value); updateOutputText(event);">
               <div id="hexColors" class="content"></div>
@@ -58,10 +68,14 @@
           <div class="tile is-parent is-8">
             <div class="tile is-child">
               <div class="content">
-                <label for='text'>Input Text</label>
+                <label for='text'>
+                  <translatable data-translate="input_text"></translatable>
+                </label>
                 <input id="text" class="input" type="text" placeholder="Your Text" value="SimplyMC"
                   oninput="updateOutputText(event);">
-                <label for='output-format'>Output Format</label><br>
+                <label for='output-format'>
+                  <translatable data-translate="output_format"></translatable>
+                </label><br>
                 <div class="select" style="width:100%">
                   <select style="width:100%" id="output-format" onchange="updateOutputText(event);">
                     <option value='0'>chat (&#rrggbb)</option>
@@ -76,20 +90,40 @@
                   </select>
                 </div>
                 <div class="hidden" id="customFormatWrapper">
-                  <label for='customFormat'>Input Text</label>
+                  <label for='customFormat'>
+                    <translatable data-translate="input_text"></translatable>
+                  </label>
                   <input id="customFormat" class="input" type="text" oninput="updateOutputText(event);">
-                  <p>Placeholders:</p>
+                  <p>
+                    <translatable data-translate="custom_format_label"></translatable>
+                  </p>
                   <ul>
-                    <li>$1 - First RR hex</li>
-                    <li>$2 - Second RR hex</li>
-                    <li>$3 - First GG hex</li>
-                    <li>$4 - Second GG hex</li>
-                    <li>$5 - First BB hex</li>
-                    <li>$6 - Second BB hex</li>
-                    <li>$c - Character to format</li>
+                    <li>
+                      <translatable data-translate="custom_format_char1"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char2"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char3"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char4"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char5"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char6"></translatable>
+                    </li>
+                    <li>
+                      <translatable data-translate="custom_format_char7"></translatable>
+                    </li>
                   </ul>
                 </div>
-                <label for="color-preset">Color Preset</label>
+                <label for="color-preset">
+                  <translatable data-translate="presets"></translatable>
+                </label>
                 <div class="select" style="width:100%">
                   <select style="width:100%" id="color-preset" onchange="preset(this.value); updateOutputText(event);">
                     <option value='0'>None</option>
@@ -102,12 +136,14 @@
                     <option value='7'>Firewatch</option>
                   </select>
                 </div>
-                <label for="exportPreset">Custom Presets</label><br>
+                <label for="exportPreset">
+                  <translatable data-translate="custom_preset"></translatable>
+                </label><br>
                 <button class="button" type="button" id="exportPreset" onclick="copyTextToClipboard(exportPreset());">
-                  Copy Preset
+                  <translatable data-translate="copy_preset"></translatable>
                 </button>
                 <button class="button" type="button" id="importPreset" onclick="showfield('importInput')">
-                  Import Preset
+                  <translatable data-translate="import_preset"></translatable>
                 </button>
                 <% if(user){ %> 
                   <button class="button" type="button" id="importPreset" onclick="openModal(document.getElementById('preset'))">
@@ -151,7 +187,9 @@
                   </div>
                 <% } %>
                 <div id="importInput" style="display: none;">
-                  <label for='import'>Paste Here</label>
+                  <label for='import'>
+                    <translatable data-translate="paste_preset"></translatable>
+                  </label>
                   <input id="import" name="ImportInput" class="input" type="text"
                     onchange="javascript: importPreset(this.value)">
                 </div>
@@ -159,19 +197,27 @@
                 <div id="formatSelector">
                   <div class="field">
                     <input type="checkbox" class="switch" id="bold" onclick="updateOutputText();">
-                    <label for="bold" class="noselect">Bold</label>
+                    <label for="bold" class="noselect">
+                      <translatable data-translate="bold"></translatable>
+                    </label>
                   </div>
                   <div class="field">
                     <input type="checkbox" class="switch" id="italics" onclick="updateOutputText();">
-                    <label for="italics" class="noselect">Italic</label>
+                    <label for="italics" class="noselect">
+                      <translatable data-translate="italic"></translatable>
+                    </label>
                   </div>
                   <div class="field">
                     <input type="checkbox" class="switch" id="underline" onclick="updateOutputText();">
-                    <label for="underline" class="noselect">Underline</label>
+                    <label for="underline" class="noselect">
+                      <translatable data-translate="underline"></translatable>
+                    </label>
                   </div>
                   <div class="field">
                     <input type="checkbox" class="switch" id="strike" onclick="updateOutputText();">
-                    <label for="strike" class="noselect">Strikethrough</label>
+                    <label for="strike" class="noselect">
+                      <translatable data-translate="strike"></translatable>
+                    </label>
                   </div>
                 </div>
               </div>
