--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -86,7 +86,7 @@
                     <option value='5'>/nick (&x&r&r&g&g&b&b)</option>
                     <option value='6'>console (§x§r§r§g§g§b§b)</option>
                     <option value='7'>bbcode [COLOR=#rrggbb]</option>
-                    <option value='8'>MiniMessage (<gradient:#hex:#hex>)</option>
+                    <option value='8'>MiniMessage</option>
                     <option value='9'>custom</option>
                   </select>
                 </div>
