--- a/src/global.css
+++ b/src/global.css
@@ -32,20 +32,23 @@
   font-display: swap;
 }
 
-@layer utilities {
-  .animation-delay-5 { animation-delay: -5s; }
-  .animation-delay-10 { animation-delay: -10s; }
-}
+.-animation-delay-5 { animation-delay: -5s; }
+.-animation-delay-10 { animation-delay: -10s; }
+
+.animation-delay-100 { animation-delay: 100ms; }
+.animation-delay-200 { animation-delay: 200ms; }
+.animation-delay-300 { animation-delay: 300ms; }
+.animation-delay-400 { animation-delay: 400ms; }
+.animation-delay-500 { animation-delay: 500ms; }
 
 html {
   background-color: hsl(270deg, 22%, 5%);
-  font-family: MinecraftRegular, MinecraftRus;
 }
 
 main {
   overflow: auto;
-  height: calc(100lvh - 68px);
-  margin-top: 68px;
+  height: calc(100lvh - 56px);
+  margin-top: 56px;
 }
 
 .font-bold {
@@ -137,7 +140,6 @@ main {
   }
 }
 
-
 .fade-in {
   opacity: 0;
   transform: translateY(-100px);
@@ -152,12 +154,6 @@ main {
     transform: translateY(0);
   }
 }
-
-.animation-delay-100 { animation-delay: 100ms; }
-.animation-delay-200 { animation-delay: 200ms; }
-.animation-delay-300 { animation-delay: 300ms; }
-.animation-delay-400 { animation-delay: 400ms; }
-.animation-delay-500 { animation-delay: 500ms; }
 
 .Scp {
   display: flex;
