--- a/src/global.css
+++ b/src/global.css
@@ -43,7 +43,6 @@ main {
 
 .font-mc {
   font-family: MinecraftRegular, MinecraftRus;
-  font-weight: bold;
 }
 
 .font-mc-bold {
@@ -82,7 +81,7 @@ main {
   width: 8px;
 }
 *::-webkit-scrollbar-track {
-  background-color: #00000000;
+  background-color: #1E2837;
   border-radius: 3px;
 }
 *::-webkit-scrollbar-thumb {
