--- a/src/global.css
+++ b/src/global.css
@@ -69,3 +69,24 @@ html {
   touch-action: manipulation;
   -webkit-tap-highlight-color: transparent;
 }
+
+* {
+  scroll-behavior: smooth;
+}
+*::-webkit-scrollbar {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 8px;
+  height: 8px;
+}
+*::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #ffffff20;
+  border: 1px solid #ffffff20;
+  border-radius: 3px;
+}
+*::-webkit-scrollbar-corner {
+  background-color: transparent;
+}
