emoji support or whatever

--- a/src/global.css
+++ b/src/global.css
@@ -4,25 +4,25 @@
 
 @font-face {
   font-family: MinecraftRegular;
-  src: url(/fonts/MinecraftRegular.otf);
+  src: url(/fonts/MinecraftRegular.ttf);
   font-display: swap;
 }
 
 @font-face {
   font-family: MinecraftBold;
-  src: url(/fonts/MinecraftBold.otf);
+  src: url(/fonts/MinecraftBold.ttf);
   font-display: swap;
 }
 
 @font-face {
   font-family: MinecraftItalic;
-  src: url(/fonts/MinecraftItalic.otf);
+  src: url(/fonts/MinecraftItalic.ttf);
   font-display: swap;
 }
 
 @font-face {
   font-family: MinecraftBoldItalic;
-  src: url(/fonts/MinecraftBoldItalic.otf);
+  src: url(/fonts/MinecraftBoldItalic.ttf);
   font-display: swap;
 }
 
