--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* fonts from https://github.com/IdreesInc/Monocraft */
+
 @font-face {
   font-family: MinecraftRegular;
   src: url(/fonts/MinecraftRegular.ttf);
